@@ -2,8 +2,10 @@ package com.mrbysco.structurecompass.client.screen;
 
 import com.mrbysco.structurecompass.Reference;
 import com.mrbysco.structurecompass.client.screen.widget.StructureListWidget;
+import com.mrbysco.structurecompass.client.screen.widget.ToggleButton;
 import com.mrbysco.structurecompass.network.message.SetStructurePayload;
 import com.mrbysco.structurecompass.registry.StructureComponents;
+import com.mrbysco.structurecompass.util.StructureUtil;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.gui.Font;
 import net.minecraft.client.gui.GuiGraphicsExtractor;
@@ -29,6 +31,9 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 
 public class CompassScreen extends Screen {
+	private final Component showTagsText = Component.translatable("structurecompass.screen.search.show_tags");
+	private final Component hideTagsText = Component.translatable("structurecompass.screen.search.hide_tags");
+
 	private enum SortType {
 		NORMAL,
 		A_TO_Z,
@@ -48,7 +53,10 @@ public class CompassScreen extends Screen {
 	private int listWidth;
 	private List<Identifier> structures;
 	private final List<Identifier> unsortedStructures;
+	private List<Identifier> tags;
+	private final List<Identifier> unsortedTags;
 	private Button loadButton;
+	private ToggleButton showTags;
 
 	private final InteractionHand usedHand;
 	private final ItemStack compassStack;
@@ -61,7 +69,7 @@ public class CompassScreen extends Screen {
 	private boolean sorted = false;
 	private SortType sortType = SortType.NORMAL;
 
-	public CompassScreen(InteractionHand hand, ItemStack compass, List<Identifier> allStructures) {
+	public CompassScreen(InteractionHand hand, ItemStack compass, List<Identifier> allStructures, List<Identifier> allTags) {
 		super(Component.translatable(Reference.MOD_PREFIX + "compass.screen"));
 		this.usedHand = hand;
 		this.compassStack = compass;
@@ -79,6 +87,9 @@ public class CompassScreen extends Screen {
 
 		this.structures = Collections.unmodifiableList(structureList);
 		this.unsortedStructures = Collections.unmodifiableList(allStructures);
+
+		this.tags = Collections.unmodifiableList(allTags);
+		this.unsortedTags = Collections.unmodifiableList(allTags);
 	}
 
 	@Override
@@ -92,7 +103,7 @@ public class CompassScreen extends Screen {
 		for (Identifier structureLocation : structures) {
 			listWidth = Math.max(listWidth, getFontRenderer().width(structureLocation.toString()) + 10);
 		}
-		listWidth = Math.max(Math.min(listWidth, width / 3), 200);
+		listWidth = Math.clamp(listWidth, 200, width / 3);
 		listWidth += listWidth % numButtons != 0 ? (numButtons - listWidth % numButtons) : 0;
 		int structureWidth = this.width - this.listWidth - (PADDING * 3);
 		int closeButtonWidth = Math.min(structureWidth, 200);
@@ -103,7 +114,7 @@ public class CompassScreen extends Screen {
 		y -= 18 + PADDING;
 		this.addRenderableWidget(this.loadButton = Button.builder(Component.translatable("structurecompass.screen.selection.select"), b -> {
 			if (selected != null) {
-				ClientPacketDistributor.sendToServer(new SetStructurePayload(usedHand, selected.getStructureLocation()));
+				ClientPacketDistributor.sendToServer(new SetStructurePayload(usedHand, selected.getStructureLocation(), selected.isTag()));
 			}
 
 			if (this.minecraft.player != null && selected != null)
@@ -115,6 +126,12 @@ public class CompassScreen extends Screen {
 		search = new EditBox(getFontRenderer(), centerWidth - listWidth / 2 + PADDING + 1, y, listWidth - 2, 14,
 				Component.translatable("structurecompass.screen.search"));
 
+		this.addRenderableWidget(this.showTags = new ToggleButton.Builder(false, showTagsText, hideTagsText, b -> {
+			ToggleButton toggleButton = ((ToggleButton) b);
+			toggleButton.setValue(!toggleButton.getValue());
+			this.updateTags();
+		}).bounds(centerWidth + listWidth / 2 - 24, PADDING, 80, 20).build());
+
 		int fullButtonHeight = PADDING + 20 + PADDING;
 		this.structureWidget = new StructureListWidget(this, width, fullButtonHeight, search.getY() - getFontRenderer().lineHeight - PADDING);
 		this.structureWidget.setX(0);
@@ -125,6 +142,9 @@ public class CompassScreen extends Screen {
 		search.setCanLoseFocus(true);
 		if (this.compassStack.has(StructureComponents.STRUCTURE)) {
 			String structure = this.compassStack.get(StructureComponents.STRUCTURE).toString();
+			if (this.compassStack.getOrDefault(StructureComponents.IS_TAG, false)) {
+				this.showTags.setValue(true);
+			}
 			search.setValue(structure);
 		}
 
@@ -142,8 +162,18 @@ public class CompassScreen extends Screen {
 		updateCache();
 	}
 
+	private void updateTags() {
+		reloadStructures();
+		this.structureWidget.refreshList();
+		updateCache();
+	}
+
 	@Override
 	public void tick() {
+		if (structureWidget.getSelected() != selected) {
+			structureWidget.setSelected(selected);
+		}
+
 		if (!search.getValue().equals(lastFilterText)) {
 			reloadStructures();
 			sorted = false;
@@ -153,8 +183,10 @@ public class CompassScreen extends Screen {
 			reloadStructures();
 			if (sortType == SortType.A_TO_Z) {
 				Collections.sort(structures);
+				Collections.sort(tags);
 			} else if (sortType == SortType.Z_TO_A) {
 				structures.sort(Collections.reverseOrder());
+				tags.sort(Collections.reverseOrder());
 			}
 			checkStages();
 			structureWidget.refreshList();
@@ -166,13 +198,28 @@ public class CompassScreen extends Screen {
 		}
 	}
 
+	public <T extends ObjectSelectionList.Entry<T>> void buildTagList(Consumer<T> ListViewConsumer, Function<Identifier, T> newEntry) {
+		if (showTags.getValue())
+			tags.forEach(mod -> ListViewConsumer.accept(newEntry.apply(mod)));
+	}
+
 	public <T extends ObjectSelectionList.Entry<T>> void buildStructureList(Consumer<T> ListViewConsumer, Function<Identifier, T> newEntry) {
 		structures.forEach(mod -> ListViewConsumer.accept(newEntry.apply(mod)));
 	}
 
 	private void reloadStructures() {
 		this.structures = this.unsortedStructures.stream().
-				filter(struc -> StringUtils.toLowerCase(struc.toString()).contains(StringUtils.toLowerCase(search.getValue()))).collect(Collectors.toList());
+				filter(struc -> {
+							Component structureName = StructureUtil.getStructureName(struc, false);
+							return StringUtils.toLowerCase(structureName.getString()).contains(StringUtils.toLowerCase(search.getValue()));
+						}
+				).collect(Collectors.toList());
+		this.tags = this.unsortedTags.stream().
+				filter(struc -> {
+							Component tagName = StructureUtil.getStructureName(struc, false);
+							return StringUtils.toLowerCase(tagName.getString()).contains(StringUtils.toLowerCase(search.getValue()));
+						}
+				).collect(Collectors.toList());
 		checkStages();
 		lastFilterText = search.getValue();
 	}
@@ -212,9 +259,13 @@ public class CompassScreen extends Screen {
 		return font;
 	}
 
-	public void setSelected(StructureListWidget.ListEntry entry) {
-		if (this.selected != entry) {
+	public void setSelected(StructureListWidget.ListEntry previousEntry, StructureListWidget.ListEntry entry) {
+		if (this.selected == previousEntry) {
 			this.selected = entry;
+		} else {
+			if (this.selected == null || entry != null) {
+				this.selected = entry;
+			}
 		}
 		updateCache();
 	}
@@ -228,7 +279,7 @@ public class CompassScreen extends Screen {
 	 */
 	@Override
 	public boolean mouseClicked(MouseButtonEvent event, boolean isDoubleClick) {
-		boolean flag =  super.mouseClicked(event, isDoubleClick);
+		boolean flag = super.mouseClicked(event, isDoubleClick);
 		if (event.button() == 1 && search.isMouseOver(event.x(), event.y())) {
 			search.setValue("");
 		}
@@ -237,12 +288,14 @@ public class CompassScreen extends Screen {
 
 	@Override
 	public void resize(int width, int height) {
+		boolean showTags = this.showTags.getValue();
 		String s = this.search.getValue();
 		SortType sort = this.sortType;
 		StructureListWidget.ListEntry selected = this.selected;
 		this.init(width, height);
 		this.search.setValue(s);
 		this.selected = selected;
+		this.showTags.setValue(showTags);
 		if (!this.search.getValue().isEmpty())
 			reloadStructures();
 		if (sort != SortType.NORMAL)
